Updates to notation for forward model emulation.

--- a/math/latex_macros_gp_inv_prob.tex
+++ b/math/latex_macros_gp_inv_prob.tex
@@ -129,6 +129,7 @@
 \newcommand{\designBatchLlik}{\ell_{\Nbatch}}
 \newcommand{\designBatchFunc}{\varphi_{\Nbatch}}
 \newcommand{\designBatchFwd}{g_{\Nbatch}}
+\newcommand{\fwdEmCond}[2][\Ndesign]{\fwdEm[{#1}]^{#2}}
 \newcommand{\acq}[1][\Ndesign]{\mathcal{A}_{#1}}
 
 % Acquisition functions 
